--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,20 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown', function(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio) return;
+    key.classList.add('playing');
+    audio.currentTime = 0;
+    audio.play();
+  })
 
+  window.addEventListener('keyup', function(e) {
+    const key = document.querySelector(`.playing[data-key="${e.keyCode}"]`);
+    if(!key) return;
+    key.classList.remove('playing');
+  });
 </script>
 
 
